# target-jsonl

./: .gitignore  CHANGELOG.md  README.md  config.sample.json  pyproject.toml  setup.py  target_jsonl.py
tests/: test_target_jsonl.py
tests/samples/: sample_config.json  sample_config_raw.json  simple_stream.singer
